# photoprismproxy

./: .gitignore  Dockerfile  LICENSE.md  README.md  package-lock.json  package.json  photoprismproxy.py  pyproject.toml
pages/: auth.html  index.html  success.html
static/: index.html
